# Angtel-projects

./: angtel-qemu-x86-64.xml  angtel-x86_64.xml  attachment2brs  attachmentPCIdevice.txt
confdb-hsr/: .clang-format  .gitignore  Makefile.am  compile_commands.json  configure.ac
confdb-hsr/.build-x86/: Makefile  config.status
confdb-hsr/.build-x86/data/: Makefile  angtel-hsr.yin
confdb-hsr/.build-x86/lib/: Makefile
confdb-hsr/.build-x86/src/: Makefile  cdbhsr  example
confdb-hsr/data/: Makefile.am  angtel-hsr.yang
confdb-hsr/lib/: Makefile.am  ads.lua  angtel-hsr_defaults  hsr_cmds.lua
confdb-hsr/src/: Makefile.am  apply_conf.c  apply_conf.h  confdb.h  handlers.c  handlers.h  hsr_module.c  hsr_module.h  log.c  log.h  main.c  status.c  status.h  utils.c  utils.h  wait_list.c  wait_list.h
libnl-master/: .directory  Makefile.am  a  asd.pcap  diagnostic.pcap  genl-ctrl-list.pcap  h_hodes.pcap  hsr_nodes.pcap  libnl-3.sym  libnl-genl-3.sym  libnl-route-3.sym
libnl-master/.build-x86/: confdefs.h  config.status  libnl-3.0.pc  libnl-cli-3.0.pc  libnl-genl-3.0.pc  libnl-idiag-3.0.pc  libnl-nf-3.0.pc  libnl-route-3.0.pc  libnl-xfrm-3.0.pc  libtool
libnl-master/.build-x86/include/netlink/: version.h
libnl-master/.build-x86/lib/route/: pktloc_grammar.c  pktloc_grammar.h  pktloc_syntax.c  pktloc_syntax.h
libnl-master/.build-x86/lib/route/cls/: ematch_grammar.c  ematch_grammar.h  ematch_syntax.c  ematch_syntax.h
libnl-master/.build-x86/python/: setup.py
libnl-master/.build-x86/src/: genl-ctrl-list  idiag-socket-details  nf-ct-add  nf-ct-events  nf-ct-list  nf-exp-add  nf-exp-delete  nf-exp-list  nf-log  nf-monitor  nf-queue  nl-addr-add  nl-addr-delete  nl-addr-list  nl-class-add  nl-class-delete  nl-class-list  nl-classid-lookup  nl-cls-add  nl-cls-delete  nl-cls-list  nl-fib-lookup  nl-link-enslave  nl-link-ifindex2name  nl-link-list  nl-link-name2ifindex  nl-link-release  nl-link-set  nl-link-stats  nl-list-caches  nl-list-sockets  nl-monitor  nl-neigh-add  nl-neigh-delete  nl-neigh-list  nl-neightbl-list  nl-pktloc-lookup  nl-qdisc-add  nl-qdisc-delete  nl-qdisc-list  (+7 more)
libnl-master/include/linux-private/linux/: if_link.h
libnl-master/include/netlink/: cache.h
libnl-master/include/netlink-private/: netlink.h  nl-auto.h  types.h
libnl-master/include/netlink/genl/: hsr_node.h
libnl-master/include/netlink/route/link/: hsr.h
libnl-master/lib/: addr.c  attr.c  cache.c  cache.c.orig  cache_mngr.c  cache_mngt.c  nl.c  utils.c
libnl-master/lib/genl/: hsr_node.c  mngt.c
libnl-master/lib/route/: link.c
libnl-master/lib/route/link/: hsr.c  vlan.c
libnl-master/src/: genl-ctrl-list.c
libnl-master/tests/: .directory  test_create_hsr.c
part1/: hsr_interf  info.md
part1/drivers/advanced/: Makefile  lab_09_at.c
part1/drivers/basic/: Makefile  xx.c
part1/drivers/lab_09_hello_world/: .Module.symvers.cmd  .hello_world.ko.cmd  .hello_world.mod.cmd  .hello_world.mod.o.cmd  .hello_world.o.cmd  .modules.order.cmd  Makefile  README.md  hello_world.c  hello_world.ko  hello_world.mod  hello_world.mod.c  modules.order
part1/hsr_interface/: .directory  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  test_create_hsr.c
part1/hsr_interface/.build-x86/: Makefile  config.status  libtool
part1/hsr_interface/.build-x86/.deps/: test_create_hsr-test_create_hsr.Po
part1/hsr_interface/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
part1/hsr_node_tests/: .directory  Makefile.am  Makefile.in  configure  configure.ac  hsr_nodes.c
part1/hsr_node_tests/.build-x86/: Makefile  a  config.status  diagnostic.pcap  history.txt  hsr_nodes  libtool  netlink.pcap
part1/hsr_node_tests/.build-x86/.deps/: hsr_nodes-hsr_nodes.Po
part1/hsr_node_tests/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
part1/vlan_interface/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  ltmain.sh  vlan  vlan.c
part1/vlan_interface/.deps/: vlan-vlan.Po
part1/vlan_interface/autom4te.cache/: output.1  requests  traces.1  traces.2
yang_schemes/: angtel-hsr.yang  angtel-interfaces.yang  ietf-interfaces-ethernet-like.yang  ietf-interfaces.yang  ietf-ptp_2019-05-07.yang  interfaces-hsr-like.yang
